# Mariner

./: .gitignore  CMakeLists.txt
examples/: main.cpp
include/: Mariner.hpp  MarinerTypes.hpp
src/enums/: logmethod.hpp  logtype.hpp
src/libraries/mdictionary/: mdictionary.hpp
src/libraries/mgarbagecollector/: mgarbagecollector.hpp  mgarbagecollector_collect.cpp  mgarbagecollector_new.cpp  mgarbagecollector_stop.cpp  mgarbagecollector_track.cpp  mgarbagecollector_untrack.cpp
src/libraries/miterate/: miterate.hpp
src/libraries/mstring/: mstring.hpp  mstring_concatenate.cpp  mstring_new.cpp  mstring_operator==.cpp  mstring_rawsize.cpp  mstring_tocstring.cpp
src/libraries/mtable/: mtable.hpp
src/objects/datamodel/: datamodel.hpp  datamodel_close.cpp  datamodel_definefastflag.cpp  datamodel_definefastint.cpp  datamodel_definefaststring.cpp  datamodel_getfastflag.cpp  datamodel_getfastint.cpp  datamodel_getfaststring.cpp  datamodel_iscontentloaded.cpp  datamodel_isloaded.cpp  datamodel_load.cpp  datamodel_new.cpp  datamodel_save.cpp
src/objects/object/: object.hpp  object_calculatedatacost.cpp  object_clearallchildren.cpp  object_clone.cpp  object_destroy.cpp  object_findfirstancestor.cpp  object_findfirstancestorofclass.cpp  object_findfirstchild.cpp  object_findfirstchildofclass.cpp  object_getattribute.cpp  object_getchildren.cpp  object_isa.cpp  object_new.cpp  object_setattribute.cpp  object_setparent.cpp
src/objects/serviceprovider/: serviceprovider.hpp  serviceprovider_getdatamodel.cpp  serviceprovider_new.cpp
src/services/logservice/: logservice.hpp  (+4 more)
(+3 files in other folders)
